--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     
     <h1>HoLa?!</h1>
-    <p>Alguien ahi?!</p>
+    <p style="background-color: aqua;">Alguien ahi?!</p>
     
 </body>
 </html>
