--- a/taller-eventos/index.html
+++ b/taller-eventos/index.html
@@ -6,8 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <input type="button" value="Saludar!">
-    
+    <input type="button" value="Saludar!" onclick="alert('Hola!')" >
+
 
 
 </body>
