--- a/taller-eventos/index.html
+++ b/taller-eventos/index.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="eventos.js" ></script>
     <title>Document</title>
 </head>
 <body>
-    <input type="button" value="Saludar!" onclick="alert('Hola!')" >
+    <div id="d1" style="padding: 5px; background-color: greenyellow;">
+        <input type="button" value="Saludar!" onclick="alert('Hola!')" >
+    </div>
 
 
 
